fixed card turn in